# aula-dk-pic-dl-givtrah

./: README.md  aula_all6.py  aula_all_new_v2.py  aula_dl_givtrah.py  aula_givtrah.py  aulaclient.py  devenv.nix  main.py  pyproject.toml
old/: aula_download_albums_with_tags.py
