[project]
name = "aula-dk-pic-dl-givtrah"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-cookie3>=0.20.1",
    "dbus-python>=1.4.0",
    "piexif>=1.1.3",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "rich>=14.0.0",
]
